// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render coorectly Button with text render coorectly 1`] = `
<button
  css={
    Object {
      "map": undefined,
      "name": "l4n4cz",
      "next": undefined,
      "styles": "
  display: inline-block;
  padding: 1rem;
  font-weight: 700;
  border-radius: 0.3em;
  cursor: pointer;
  line-height: 1;
  text-decoration: none;
  border: 1px solid transparent;
  color: #ffffff;
  background-color: #3700b3;

  &:focus,
  &:hover {
    outline: none;
    transperent: 0.4;
    border: 1px solid
      rgba(255, 255, 255, 0.1);
    box-shadow: 0px 0px 5px 1px
      rgba(255, 255, 255, 0.1);
  }

  &:disabled {
    background-color: rgba(255, 255, 255, 0.1);
  }
",
      "toString": [Function],
    }
  }
>
  Button
</button>
`;

exports[`Button render coorectly Button without props render coorectly 1`] = `
<button
  css={
    Object {
      "map": undefined,
      "name": "l4n4cz",
      "next": undefined,
      "styles": "
  display: inline-block;
  padding: 1rem;
  font-weight: 700;
  border-radius: 0.3em;
  cursor: pointer;
  line-height: 1;
  text-decoration: none;
  border: 1px solid transparent;
  color: #ffffff;
  background-color: #3700b3;

  &:focus,
  &:hover {
    outline: none;
    transperent: 0.4;
    border: 1px solid
      rgba(255, 255, 255, 0.1);
    box-shadow: 0px 0px 5px 1px
      rgba(255, 255, 255, 0.1);
  }

  &:disabled {
    background-color: rgba(255, 255, 255, 0.1);
  }
",
      "toString": [Function],
    }
  }
/>
`;
